# palimpsest

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  palimpsest.toml  pyproject.toml
.github/workflows/: ci.yml
crates/palimpsest/: Cargo.toml  README.md
crates/palimpsest/src/: lib.rs
examples/: garden.bet  garden.clike  garden.hask  garden.lclike  garden.talkie  observatory.bet  observatory.clike  observatory.hask  observatory.lclike  observatory.talkie  vault.bet  vault.clike  vault.hask  vault.lclike  vault.talkie
examples/bet-tree-sitter/: grammar.js  tree-sitter.json
examples/bet-tree-sitter/src/: grammar.json  node-types.json  parser.c
examples/clike-lezer/src/: clike.grammar
examples/clike-nom/: Cargo.toml
examples/clike-nom/src/: lib.rs
examples/hask-lezer/src/: hask.grammar
examples/talkie-pest/: Cargo.toml
examples/talkie-pest/src/: lib.rs  talkie.pest
palimpsest/: __main__.py  api.py  app.py  cli.py  config.py  models.py  ui.py
palimpsest/highlight/: __init__.py  config.py  services.py
palimpsest/highlight/presets/: __init__.py  cargo_wasm_bindgen.py  lezer.py  tree_sitter.py
palimpsest/static/css/: style.css
palimpsest/static/js/: api.mjs  app.js  app.mjs  configured_filetypes.mjs  parser_runtimes.mjs  workspace.mjs
palimpsest/templates/: index.j2.html
palimpsest/workbench/: __init__.py  api.py  app.py  ui.py
tests/: test_api.py  test_cli.py  test_config.py  test_highlight_services.py
tests/js/: configured_filetypes.test.mjs  runtime_registries.test.mjs
(+16 files in other folders)
