[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palimpsest"
version = "0.1.0"
description = "A local browser workbench for developing language grammars against real project files."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Brian Jorgensen", email = "brian.jorgensen@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Editors",
]
dependencies = [
    "flask>=3.1.3",
    "pydantic>=2.13.4",
]

[project.urls]
Homepage = "https://github.com/b33j0r/palimpsest"
Repository = "https://github.com/b33j0r/palimpsest"
Issues = "https://github.com/b33j0r/palimpsest/issues"

[project.scripts]
palimpsest = "palimpsest.app:main"
